<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shans_000.vehicleguru1.Main3Activity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="153dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/b"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/purchase_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:hint="@string/purchase_price"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/Down_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:hint="@string/Down_payment"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/interest_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:hint="@string/interest_rate"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/loan_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:hint="@string/loan_period"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        tools:ignore="LabelFor" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:onClick="showLoanPayments"
        android:text="@string/Calculate"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="Monthly Repayment Amount:"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/monthly_payment_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:hint="$1000"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="Loan Amount:"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/loan_amount_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:hint="$9000000:"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="Total Interest :"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/total_interest_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:hint="$4000:"
        android:textSize="16sp" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="11dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />




</TableLayout>
